<resources>
    <string name="app_name">Rajawali Air</string>
    <string name="tv_onboarding_1_label">Select Your Destination</string>
    <string name="tv_onboarding_1_description">Discover your dream destination with us. We offer a variety of flight ticket options to various tourist destinations. </string>
    <string name="tv_onboarding_2_label">Explore Promos and Discounts</string>
    <string name="tv_onboarding_2_description">Get exclusive access to the latest promotions and discounts. Be the first to grab the best deals for your travels.</string>
    <string name="tv_onboarding_3_label">Effortless  Ticket Booking</string>
    <string name="tv_onboarding_3_description">Enjoy the convenience of booking airline tickets for your journey with friends or family. We prioritize your comfort throughout the booking process.</string>
    <string name="tv_get_started_label">Get Ready for Adventure!</string>
    <string name="tv_get_started_description">You’re now ready to explore the world. Discover limitless travel experiences with Rajawali.</string>
    <string name="btn_get_started_label">Get Started</string>
    <string name="tv_register_label">Get Ready for Adventure!</string>
    <string name="tv_register_form_label">Register Your Account</string>
    <string name="tv_register_form_description">Enhance your journey with exciting promotions!</string>
    <string name="et_full_name_label">Full Name</string>
    <string name="et_email_label">Email</string>
    <string name="et_phone_number_label">Phone Number</string>
    <string name="et_password_label">Password</string>
    <string name="et_confirm_password_label">Confirm Password</string>
    <string name="cb_register_term_description">I agree to the Terms &amp; Conditions and Privacy Policy of the application.</string>
    <string name="btn_register_label">Register</string>
    <string name="tv_verification_label">Account Verification</string>
    <string name="tv_verification_form_label">Verification</string>
    <string name="tv_verification_form_description">Enter the verification code that has been sent to your email</string>
    <string name="tv_resend_verification_label">Resend Code</string>
    <string name="btn_verification_label">Verify</string>
    <string name="tv_top_code_wrong">OTP Code is Incorrect</string>
    <string name="tv_home_page_booking_flight_label">Fly with Us</string>
    <string name="tv_home_page_departure_label">Departure</string>
    <string name="tv_home_page_arrive_label">Arrive</string>
    <string name="btn_home_page_book_now">Book Now</string>
    <string name="tv_departure_city_name_label">%1$s (%2$s)</string>
    <string name="tv_arrive_city_name_label">%1$s (%2$s)</string>
    <string name="tv_choose_ticket_flight_route">%1$s ➜ %2$s</string>
    <string name="tv_class_passenger">| %1$s</string>
    <string name="tv_date_picket">%1$s |</string>
    <string name="tv_vertical_line">| </string>
    <string name="tv_choose_ticket_departure_schedule_label">Departure Schedule</string>
    <string name="tv_no_tickets">Tickets not found</string>
    <string name="tv_choose_ticket_return_schedule_label">Return Schedule</string>
    <string name="item_home">Home</string>
    <string name="item_bookings">Bookings</string>
    <string name="item_History">History</string>
    <string name="item_account">Account</string>
    <string name="item_filter">Filter</string>
    <string name="item_sort">Sort</string>
    <string name="tv_tourist_destination_label">Tourist Destination</string>
    <string name="btn_test_crash">Crash Test</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip"><u>Skip</u></string>
    <string name="btn_register"><u>Register</u></string>
    <string name="resent_code"><u>Resend Code</u></string>
    <string name="rajawali_air_logo">Rajawali Air Logo</string>
    <string name="tv_yogyakarta_airport_code">YIA</string>
    <string name="tv_choose">Pick Airport</string>
    <string name="tv_yogyakarta_city">Yogyakarta(YK)</string>
    <string name="tv_balikpapan_airport_code">Sepinggan</string>
    <string name="tv_balikpapan_city">Balikpapan(BPN)</string>
    <string name="tv_pick_city_label">Select City or Airport</string>
    <string name="tv_recent_search_label">Recent Searches</string>
    <string name="tv_search_not_found">City/Airport is not found</string>
    <string name="btn_clear_recent_search_label">Clear</string>
    <string name="et_passenger">0</string>
    <string name="tv_adult_label">Adult</string>
    <string name="tv_adult_decription">Age 12 and over</string>
    <string name="tv_child_label">Child</string>
    <string name="tv_child_description">Age 2 – 11</string>
    <string name="tv_infant_label">Infant</string>
    <string name="tv_infant_description">Age 0 – 2</string>
    <string name="tv_class_description">Select cabin class</string>
    <string name="tv_class_label">Class</string>
    <string name="tv_economy_description">Fly affordably with all your essentials covered.</string>
    <string name="tv_economy_label">Economy</string>
    <string name="tv_passenger_description">Select amount of Passengers</string>
    <string name="tv_passenger_label">Passenger(s)</string>
    <string name="tv_business_label">Business</string>
    <string name="tv_business_description">Fly in style with exclusive check-in and seating.</string>
    <string name="tv_first_label">First Class</string>
    <string name="tv_first_description">The most luxurious class, with personalized \nfive-star services.</string>
    <string name="btn_done">Done</string>
    <string name="btn_continue">Continue</string>
    <string name="tv_airplane_id">RW225, RW752</string>
    <string name="tv_departure_time">08:15</string>
    <string name="tv_arrive_time">09:05</string>
    <string name="tv_departure_city_code_label">YIA</string>
    <string name="tv_arrive_city_code_label">BPN</string>
    <string name="tv_direct_time">1h 50m</string>
    <string name="tv_price_ticket">IDR %1$d</string>
    <string name="tv_point">%1$d Loyalty Points</string>
    <string name="tv_date_departure">Thursday, 31 January 2024</string>
    <string name="tv_date_month">25 Jan</string>
    <string name="tv_departure_city">Yogyakarta (YIA)</string>
    <string name="tv_arrive_city">Balikpapan (BPN)</string>
    <string name="tv_departure_airport_name">Yogyakarta International Airport | Terminal Domestic</string>
    <string name="tv_arrive_airport_name">Sepinggan | Terminal Domestic</string>
    <string name="tv_nama_maskapai">Rajawali Air</string>
    <string name="tv_ticket_detail">%1$s | %2$s | %3$s</string>
    <string name="tv_baggage">Cabin baggage 7kg\nBaggage 20 kg</string>
    <string name="tv_food">In-flight meals</string>
    <string name="tv_flight_detail_label">Flight Details</string>
    <string name="tv_flight_length">1h 50m</string>
    <string name="tv_flight_date">Thursday, 25 Jan 2024</string>
    <string name="tv_city_code_time">%1$s (%2$s) | %3$s</string>
    <string name="tv_city_code">%1$s (%2$s)</string>
    <string name="tv_departing_airport">%1$s | %2$s</string>
    <string name="tv_flight_number">%1$s | %2$s</string>
    <string name="tv_arriving__city_code_time">%1$s | %2$s</string>
    <string name="tv_arriving_airport">%1$s | %2$s</string>
    <string name="tv_point_gain">Earn %1$d Loyalty Points</string>
    <string name="tv_luggage_additional_description">Additional baggage up to 40kg</string>
    <string name="tv_luggage_description">Cabin baggage 7kg</string>
    <string name="tv_meal_description">In-flight meals</string>
    <string name="tv_total_label">Total</string>
    <string name="tv_wifi_description">WiFi not available</string>
    <string name="tv_usb_port_description">Power/USB port not available</string>
    <string name="tv_ticket_type">Economy</string>
    <string name="tv_total_price">IDR %1$d</string>
    <string name="tv_safe_total_price">IDR %1$s</string>
    <string name="tv_safe">Safe</string>
    <string name="tv_departure">Yogyakarta</string>
    <string name="tv_arrive">Balikpapan</string>
    <string name="tv_adult_passenger">%1$d Adults</string>
    <string name="tv_child_passenger">%1$d Child</string>
    <string name="tv_infant_passenger">%1$d Infant</string>
    <string name="tv_coma">, </string>
    <string name="tv_departure_date">Thu, 25 Jan 2024</string>
    <string name="tv_direct_flight">%1$s – %2$s | Direct Flight</string>
    <string name="tv_passenger_detail">Passenger %1$d (%2$s)</string>
    <string name="tv_passenger_detail_other">Passenger 2 (Adult)</string>
    <string name="radio_mr">Mr.</string>
    <string name="radio_mrs">Mrs.</string>
    <string name="radio_ms">Ms.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_25_jan_2024_08_15_09_05">25 Jan 2024, 08:15 – 09:05</string>
    <string name="_1h_50m">1h 50m</string>
    <string name="_0_kg">0 Kg</string>
    <string name="idr_0">IDR 0</string>
    <string name="_5_kg">5 Kg</string>
    <string name="idr_250_000">IDR 250.000</string>
    <string name="_10_kg">10 Kg</string>
    <string name="idr_500_000">IDR 500.000</string>
    <string name="_20_kg">20 Kg</string>
    <string name="idr_1_000_000">IDR 1.000.000</string>
    <string name="_30_kg">30 Kg</string>
    <string name="idr_2_000_000">IDR 2.000.000</string>
    <string name="passenger_1_adult">Passenger 1 (Adult)</string>
    <string name="total_price">IDR 500.000</string>
    <string name="_3_meals_idr_146_000">3 Meals (IDR 146.000)</string>
    <string name="passenger_2_adult">Passenger 2 (Adult)</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="_25_jan_2024_08_15_09_05_1h_50m">25 Jan 2024, 08:15 – 09:05 | 1h 50m</string>
    <string name="tv_price_details_label">Price Details</string>
    <string name="tv_price_label">price</string>
    <string name="tv_adult_amount">Adult (%1$dx)</string>
    <string name="tv_child_amount">Child (%1$dx)</string>
    <string name="tv_infant_amount">Infant (%1$dx)</string>
    <string name="tv_baggage_label">Baggage</string>
    <string name="tv_meals_label">Meals</string>
    <string name="tv_travel_insurance_amount">Travel Insurance (%1$dx)</string>
    <string name="tv_baggage_insurance_amount">Baggage Insurance (%1$dx)</string>
    <string name="tv_flight_delay_insurance_amount">Flight Delay Insurance (%1$dx)</string>
    <string name="tv_other_fees_label">Other Fees</string>
    <string name="tv_tax_label">Tax</string>
    <string name="tv_included_label">Included</string>
    <string name="tv_add_ons_label">Add-ons</string>
    <string name="tv_how_to_pay_step_1">1. Login to <b>Internet Banking</b></string>
    <string name="tv_how_to_pay_step_2">2. Select <b>Transfer Dana</b></string>
    <string name="tv_how_to_pay_step_3">3. Select <b>Transfer ke BCA Virtual Account</b></string>
    <string name="tv_how_to_pay_step_4">4. Input <b>Virtual Account Number</b></string>
    <string name="tv_how_to_pay_step_5">5. Click <b>Lanjutkan</b> dan <b>Kirim</b></string>
    <string name="tv_how_to_pay_step_6">6. <b>Payment receipt</b> displayed</string>
    <string name="tv_how_to_pay_step_7">7. Payment Done</string>
    <string name="tv_no_flight_ticket_available_label">The flight you’re looking for isn’t available right now</string>
    <string name="tv_no_flight_ticket_available_description">Let’s try changing the date or exploring other destinations to find a delightful journey</string>
    <string name="btn_no_flight_ticket_available_label">Search Other Flights</string>
</resources>