<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/item_home"
        android:icon="@drawable/selector_menu_icon_home"
    />
    <item
        android:id="@+id/menu_bookings"
        android:title="@string/item_bookings"
        android:icon="@drawable/selector_menu_icon_booking"
        />
    <item
        android:id="@+id/menu_history"
        android:title="@string/item_History"
        android:icon="@drawable/selector_menu_icon_history"
        />
    <item
        android:id="@+id/menu_account"
        android:title="@string/item_account"
        android:icon="@drawable/selector_menu_icon_account"
        />
</menu>