<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingBottom="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".presentation.bottomSheetDialog.passenger.PassengerBottomSheetDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tv_price_details_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_departure_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_details_label"
            tools:text="@string/tv_departure" />

        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="14dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/long_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departure_location_label"
            app:layout_constraintStart_toEndOf="@+id/tv_departure_location_label"
            app:layout_constraintTop_toTopOf="@+id/tv_departure_location_label" />

        <TextView
            android:id="@+id/tv_arrive_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departure_location_label"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow_right"
            app:layout_constraintTop_toTopOf="@+id/tv_departure_location_label"
            tools:text="@string/tv_arrive" />

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tv_price_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_departure_location_label" />

        <TextView
            android:id="@+id/tv_adult_passenger_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_label"
            tools:text="@string/tv_adult_amount" />

        <TextView
            android:id="@+id/tv_adult_passenger_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_adult_passenger_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_adult_passenger_count"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_child_passenger_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_adult_passenger_count"
            tools:text="@string/tv_child_amount" />

        <TextView
            android:id="@+id/tv_child_passenger_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_child_passenger_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_child_passenger_count"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_infant_passenger_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_infant_amount"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_child_passenger_count" />

        <TextView
            android:id="@+id/tv_infant_passenger_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_infant_passenger_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_infant_passenger_count"
            tools:text="@string/total_price" />

        <View
            android:id="@+id/view_horizontal_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_infant_passenger_count" />

        <TextView
            android:id="@+id/tv_add_ons_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tv_add_ons_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_horizontal_line_2" />

        <TextView
            android:id="@+id/tv_baggage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_baggage_label"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_ons_label" />

        <TextView
            android:id="@+id/tv_total_baggage_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@+id/tv_baggage_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_baggage_label"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_meals_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/tv_meals_label"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_baggage_label" />

        <TextView
            android:id="@+id/tv_total_meals_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@+id/tv_meals_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_meals_label"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_travel_insurance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/tv_travel_insurance_amount"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meals_label" />

        <TextView
            android:id="@+id/tv_travel_insurance_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_travel_insurance_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_travel_insurance_label"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_baggage_insurance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/tv_baggage_insurance_amount"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_travel_insurance_label" />

        <TextView
            android:id="@+id/tv_baggage_insurance_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_baggage_insurance_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_baggage_insurance_label"
            tools:text="@string/total_price" />

        <TextView
            android:id="@+id/tv_flight_delay_insurance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:text="@string/tv_flight_delay_insurance_amount"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_baggage_insurance_label" />

        <TextView
            android:id="@+id/tv_flight_delay_insurance_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_flight_delay_insurance_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_flight_delay_insurance_label"
            tools:text="@string/total_price" />

        <View
            android:id="@+id/view_horizontal_line_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_flight_delay_insurance_price" />

        <TextView
            android:id="@+id/tv_other_fees_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tv_other_fees_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_horizontal_line_3" />

        <TextView
            android:id="@+id/tv_tax_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_tax_label"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_other_fees_label" />

        <TextView
            android:id="@+id/tv_tax_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_included_label"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tax_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_tax_label"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/view_horizontal_line_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tax_label" />

        <TextView
            android:id="@+id/tv_total_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tv_total_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_horizontal_line_4" />

        <TextView
            android:id="@+id/tv_total_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_price_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_total_price_label"
            tools:text="@string/total_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>