<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_no_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_stranded_traveler_amico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_available_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/tv_no_flight_ticket_available_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_available" />

    <TextView
        android:id="@+id/tv_no_available_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/tv_no_flight_ticket_available_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_available_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/roboto_bold"
        android:padding="0dp"
        android:textColor="@color/white"
        android:text="@string/btn_no_flight_ticket_available_label"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_available_description" />


</androidx.constraintlayout.widget.ConstraintLayout>